# ani-sage

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  IMAGE-IMPROVEMENTS.md  PROGRESS.md  README.md  SECURITY.md  SUMMARY.md  UAT_DEMO_SCRIPT.md  activate_venv.sh  analyze-recommendations.js  ani-sage-roadmap.md  api-endpoints.js  api-integration-demo.ts  cleanup.sh  core-algorithms.js  data-flow.mermaid  data-models.ts  database-schema.mermaid  debug_config.py  deployment-resolution-plan.md  direct-recommendation-test.js  external-api-integration.js  frontend-components.mermaid  implementation-roadmap.mermaid  jest.config.js  malsync-test.js  malsync-test.mjs  mcp-integration.js  mcp-profile-integration.ts  next.config.cjs  next.config.js  package-lock.json  package.json  profile-similarity.ts  profile-update.test.ts  profile-update.ts  psychological-dimensions.ts  pyproject.toml  (+31 more)
.claude-mcp/: github.mcp.yaml  package-lock.json
api/: anilist-data-pipeline.ts  anime-api-adapter.ts  anime-attribute-mapper.ts  anime-data-service.ts  config.ts  db.ts  demo.ts  hello.js  index.js  index.ts  mcp-anime-integration.ts  question-bank.ts  route.ts  server.ts  status.js  types.ts  utils.ts  vercel-api.js
api/core/: client.ts  rate-limits.ts
api/v1/: route.ts
app/: globals.css  layout.tsx  middleware.ts  page.tsx
app/context/: UserContext.tsx
app/lib/: anime-api-adapter.ts  anime-attribute-mapper.ts  db.ts  mock-data.js  question-bank.ts  types.ts  utils.ts
app/profile/: page.tsx
app/questions/: page.tsx
app/recommendations/: page.tsx
app/services/: api.ts
app/test-manual-images/: page.tsx
docs/: AI_FEATURES.md  config_example.py  configuration.md  logging.md  logging_example.py
docs/development/: setup.md
pages/api/: answers.js  debug.js  hello.js  profile.js  questions.js  recommendations.js  session.js
public/: debug-recommendations.html  debug.html  test-images.html  test-manual-images.html
scripts/: demo_color_palettes.py  demo_color_recommendations.py  demo_recommendations.py  get_tokens.py  install_deps.py  run_demo_no_api.py  setup_openai.py  test_imports.py  top_anime_trailers.py
src/: App.css  App.tsx  index.css  types.ts  worker.ts
src/api/: __init__.py
src/cli/: __init__.py  main.py  metadata.py  sentiment_cli.py
src/handlers/: anime-details.ts  profile.ts  questions.ts  recommendations.ts  session.ts
src/pages/: Home.tsx  (+3 more)
tests/: README.md  conftest.py  test_config.py  test_metadata.py  test_recommendation_engine.py  test_sentiment_analyzer.py  test_user_preferences.py
(+91 files in other folders)
